scripts/nullness/annotator/url5a01f2c1d9_core9_core_tgz-pJ8-io_core9_core_boot_BootstrapFrameworkJ8.txt
../annotator/url5a01f2c1d9_core9_core_tgz-pJ8-io_core9_core_boot_BootstrapFrameworkJ8/src/net/xeoh/plugins/diagnosis/local/impl/serialization/java/Entry.java:34: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url5a01f2c1d9_core9_core_tgz-pJ8-io_core9_core_boot_BootstrapFrameworkJ8/src/net/xeoh/plugins/diagnosis/local/impl/serialization/java/Entry.java:89: error: cannot find symbol
    @Initializer @SuppressWarnings("unchecked")
     ^
  symbol:   class Initializer
  location: class Entry
Note: ../annotator/url5a01f2c1d9_core9_core_tgz-pJ8-io_core9_core_boot_BootstrapFrameworkJ8/src/net/xeoh/plugins/base/impl/spawning/Spawner.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
